# hypothesis-engine

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: test.yml
config/: a100_remote.toml  default.toml
config/capabilities/: README.md  catalog.yaml
config/capabilities/ai/: stem-defect-identification-2d.yaml
config/capabilities/experimental/: .gitkeep  auto-pld.yaml  micro-raman.yaml  mpms.yaml  pfm.yaml  ppms.yaml  stem-2d.yaml  xps.yaml  xrd.yaml
config/capabilities/simulation/: lammps-md.yaml  vasp-dft.yaml
config/discovery_profiles/: cs_ai.yaml  materials_chemistry.yaml  microbiology.yaml
config/prompts/: evolution_combine.md  evolution_feasibility.md  evolution_out_of_box.md  evolution_simplify.md  generation_debate.md  generation_literature.md  metareview_final.md  metareview_system.md  parse_goal.md  ranking_debate.md  ranking_pairwise.md  reflection_observation.md  reflection_review.md  reflection_verification.md
hypothesis_engine/: citations.py  cli.py  config.py  file_lock.py  ids.py  logging.py
hypothesis_engine/agents/: base.py  evolution.py  generation.py  literature_review.py  metareview.py  proximity.py  ranking.py  reflection.py  schemas.py  supervisor.py
hypothesis_engine/analysis/: __init__.py  rag_projection.py  session_report.py
hypothesis_engine/bench/: __init__.py  goldset.py  presets.py  runner.py
hypothesis_engine/capabilities/: __init__.py  catalog.py  grounding.py  models.py  prompting.py
hypothesis_engine/evals/: rubrics.py  runner.py
hypothesis_engine/evals/fixtures/: generation.jsonl  ranking.jsonl
hypothesis_engine/llm/: anthropic_client.py  batch.py  budgets.py  estimator.py  openai_client.py  prompt_boundaries.py  prompts.py  provider.py  retry.py  routing.py  tool_loop.py
hypothesis_engine/models/: __init__.py  feedback.py  hypothesis.py  review.py  session.py  task.py  tournament.py  transcript.py
hypothesis_engine/obs/: metrics.py
hypothesis_engine/orchestrator/: elo.py  events.py  feedback_actions.py  termination.py
hypothesis_engine/safety/: citation_verifier.py  classifier.py  quoting.py
hypothesis_engine/storage/: artifacts.py  db.py  schema.sql
hypothesis_engine/storage/migrations/: 0001_initial.sql  0002_review_feasibility.sql  0003_model_bench.sql  0004_bench_goldset.sql  0005_bench_mode.sql  0006_tournament_pair_reservations.sql  0007_tournament_prompt_metadata.sql  0008_hypothesis_citations.sql
hypothesis_engine/storage/repos/: __init__.py  embeddings.py  (+9 more)
hypothesis_engine/tests/: conftest.py
hypothesis_engine/tools/: base.py  capabilities.py  rag.py  registry.py  science_skills.py  web_fetch.py  web_search.py
hypothesis_engine/vectors/: embedder.py  store.py
hypothesis_engine/web/: app.py  sanitize.py  workflow_state.py
scripts/: backfill_bench_tokens.py  build_bench_report.py  install_rag_vendor.sh  probe_openai_tool_compat.py
(+62 files in other folders)
